# Aero424project

./: A220.cpp  A220.h  A320.cpp  A320.h  A330.cpp  A330.h  A350.cpp  A350.h  B737.cpp  B737.h  B767.cpp  B767.h  B777.cpp  B777.h  B787.cpp  B787.h  CMakeLists.txt  README.md  initializer.cpp  initializer.h  instructions.cpp  instructions.h  instructions.txt  main.cpp  plane.cpp  plane.h  randomnumbergenerators.cpp  randomnumbergenerators.h  userinterface.cpp  userinterface.h
